# corza-agent-framework

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  getting-started.md  skills.md
examples/: 01_hello_agent.py  02_custom_tools.py  03_multi_agent.py  04_web_app.py
examples/frontend/: sse-client.js  use-agent.ts
src/corza_agents/: __init__.py  app.py  dependencies.py
src/corza_agents/api/: __init__.py  router.py  run_registry.py  schemas.py  service.py
src/corza_agents/core/: __init__.py  engine.py  errors.py  llm.py  types.py
src/corza_agents/memory/: __init__.py  context.py  health.py  working.py
src/corza_agents/middleware/: __init__.py  audit.py  base.py  context_compression.py  loop_guard.py  permissions.py  rate_limit.py  token_tracking.py
src/corza_agents/orchestrator/: __init__.py  orchestrator.py  sub_agent.py
src/corza_agents/persistence/: __init__.py  base.py  factory.py  memory.py  models.py  repository.py  sqlite.py
src/corza_agents/prompts/: __init__.py  templates.py
src/corza_agents/scheduler/: __init__.py  models.py  scheduler.py
src/corza_agents/skills/: __init__.py  manager.py
src/corza_agents/streaming/: __init__.py  events.py  sse.py
src/corza_agents/tools/: __init__.py  builtin.py  decorators.py  handlers.py  registry.py
tests/: helpers.py  test_api.py  test_app_factory.py  test_builtin_tools.py  test_context.py  test_context_compression.py  test_delegation.py  test_engine.py  test_error_paths.py  test_fallback.py  test_handlers.py  test_llm.py  test_middleware.py  test_orchestrator.py  test_persistence.py  test_prompts.py  test_rate_limit.py  test_router_integration.py  test_scheduler.py  test_security.py  test_service.py  test_skills.py  test_sse.py  test_streaming.py  test_tools.py  test_types.py  test_working_memory.py
