[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "corza-agents"
version = "0.3.0"
description = "Agent framework for web applications. SSE streaming, PostgreSQL persistence, FastAPI integration."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["ai", "agents", "llm", "react", "web", "fastapi", "sse", "streaming", "backend"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "pydantic>=2.0",
    "structlog>=24.0",
    "aiohttp>=3.9",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
]

[project.optional-dependencies]
templates = ["jinja2>=3.1"]
sqlite = ["aiosqlite>=0.20"]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
google = ["google-genai>=1.0"]
scheduler = ["croniter>=2.0"]
all = ["corza-agents[templates,sqlite,anthropic,openai,google,scheduler]"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8", "aiosqlite>=0.20", "httpx>=0.27", "jinja2>=3.1"]

[project.urls]
Repository = "https://github.com/corza-ai/corza-agent-framework"

[tool.hatch.build.targets.wheel]
packages = ["src/corza_agents"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "UP042"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["corza_agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
